# bbspirit

./: CMakeLists.txt  README.md  bbspirit.cpp  conanfile.py
doc/: bbspirit.cpp  mini_xml2.cpp
include/: BBDocument.h  HtmlFormatter.hpp  TextFormatter.hpp  bbspirit.hpp
include/bbspirit/: bbspirit.hpp
tests/: CMakeLists.txt  test_format.cpp  test_misc.cpp  test_parse.cpp
